<resources>
    <string name="app_name">我的待办</string>
    <string name="hint_task_title">准备做什么？</string>
    <string name="hint_task_description">描述</string>
    <string name="btn_send">发送</string>
    <string name="search_hint">搜索任务…</string>
    <string name="priority_none">无</string>
    <string name="priority_low">低</string>
    <string name="priority_medium">中</string>
    <string name="priority_high">高</string>
    <string name="filter_priority">按优先级</string>
    <string name="priority_label">优先级</string>
    <string name="reminder_label">提醒时间</string>
    <string name="reminder_none">不设置提醒</string>
    <string name="reminder_clear">清除提醒</string>
    <string name="reminder_permission_hint">通知权限未开启，提醒可能不会弹出</string>
    <string name="notification_task_reminder_title">待办提醒</string>
    <string name="notification_channel_task_reminders">任务提醒</string>
    <string name="notification_channel_task_reminders_desc">待办任务到点提醒</string>
    <string name="title_pending">待完成</string>
    <string name="search_label">搜索</string>
    <string name="clear_search">清除搜索</string>
    <string name="empty_search_result">没有找到匹配的任务</string>
    <string name="add_task">添加任务</string>
    <string name="delete_label">删除</string>
    <string name="hint_task_description_optional">任务描述（可选）</string>
    <string name="pick_date">选择日期</string>
    <string name="no_date_set">不设置日期</string>
    <string name="clear_date">清除日期</string>
    <string name="filter_all">全部</string>
    <string name="filter_active">进行中</string>
    <string name="filter_completed">已完成</string>
    <string name="filter_priority_all">全部优先级</string>
    <string name="filter_priority_high">高优先级</string>
    <string name="filter_priority_medium">中优先级</string>
    <string name="filter_priority_low">低优先级</string>
    <string name="filter_priority_none">无优先级</string>
</resources>
